# scholarly-similarity

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: evaluation.yaml  runtime.yaml  theory_v001.yaml
docs/: CODEX_CLI_NGINX_TTYD.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_PROFILE_BATCH_RUNNER_V1.md  LINEAGE_CODEX_CONTINUATION_BUNDLE_20260410.md  LINEAGE_THEORY_IMPLEMENTED_SUMMARY_20260410.md  NEO4J_CANDIDATE_POOL_EXPORTER_V1.md  NEO4J_IMPORT_BUNDLE_LOADER_V1.md  REMOTE_SERVER_DEPLOYMENT.md  SEED_PACKET_BUILDER_V1.md  SEED_REPLY_INBOX_AUTORUN_V1.md  SEED_REPLY_INBOX_PROCESSOR_V1.md  SEED_SELECTION_PIPELINE_V1.md  SEED_VERIFIER_REPLY_INGEST_V1.md  V1_OPERATOR_GUIDE.md
schemas/: seed_selection_review_packet_v1.schema.yaml  seed_selection_verifier_reply_v1.schema.yaml
scripts/: build_neo4j_openalex_import_bundle.py  build_seed_review_packet.py  export_candidate_pool_from_neo4j.py  ingest_seed_verifier_reply.py  load_neo4j_import_bundle.py  materialize_seed_cycle.py  normalize_seed_verifier_reply.py  process_seed_reply_inbox.py  process_seed_reply_inbox_autorun.py  run_codex_ttyd.sh  run_graph_path_separability_audit.py  run_launch_profile_batch.py  run_streamlit_server.sh  run_v1_smoke.py
src/: __init__.py  config.py  env_config.py  models.py  workspace_smoke.py
tests/: test_agent_loop_packets.py  test_baseline_promotion.py  test_baseline_registry.py  test_batch_eval.py  test_batch_ui_loader.py  test_batch_ui_runner.py  test_benchmark_curation.py  test_benchmark_health.py  test_build_local_corpus.py  test_candidate_apply_run.py  test_smoke_cli.py  (+32 more)
(+187 files in other folders)
